license-server/license-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-server
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: license-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: license-server
spec:
  serviceName: license-server
  replicas: 1
  selector:
    matchLabels:
      app: license-server
  template:
    metadata:
      labels:
        app: license-server
    spec:
      containers:
        - name: license-server
          image: 730490031339.dkr.ecr.ap-northeast-2.amazonaws.com/simple-license:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage
              mountPath: /home/redmine/data/license-server/h2/
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi
