license-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: license-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/server-snippet: |
      location /papypapy {
        allow 182.208.21.16;
        deny all;
        proxy_pass http://license-server.epapyrus.svc.cluster.local:8080;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - license.epapyrus.com
    secretName: license.epapyrus.com-tls
  rules:
    - host: license.epapyrus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: license-server
                port:
                  number: 8080
